--- a/package.json
+++ b/package.json
@@ -8,30 +8,50 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.0.0",
     "@expo/vector-icons": "^10.1.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/material-top-tabs": "^5.2.5",
+    "@ui-kitten/eva-icons": "^5.0.0",
+    "base64-js": "^1.3.1",
     "expo": "~37.0.3",
+    "expo-image-picker": "^8.1.0",
+    "expo-linear-gradient": "^8.1.0",
+    "expo-permissions": "~8.1.0",
+    "firebase": "^7.14.3",
+    "moment": "^2.25.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-dropdown": "0.0.6",
+    "react-native-elements": "^2.0.0",
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-picker": "^2.3.1",
     "react-native-material-dropdown": "^0.11.1",
+    "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.7.0",
+    "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-svg": "^12.1.0",
+    "react-native-tab-view": "^2.14.0",
+    "react-native-ui-kitten": "^4.4.1",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.9",
     "react-navigation-drawer": "^2.4.13",
     "react-navigation-header-buttons": "^3.0.5",
+    "react-navigation-material-bottom-tabs": "^2.2.12",
     "react-navigation-stack": "^2.4.0",
+    "react-navigation-tabs": "^2.8.13",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "@babel/core": "^7.8.6",
+    "babel-preset-expo": "~8.1.0"
   },
   "private": true
 }
